<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standartMargin"
        android:layout_marginLeft="@dimen/standartMargin"
        android:layout_marginEnd="@dimen/standartMargin"
        android:layout_marginRight="@dimen/standartMargin"
        android:layout_marginBottom="@dimen/standartMargin"
        android:hint="@string/loginHint"
        android:ems="@integer/ems"
        android:textColor="@color/colorPrimary"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standartMargin"
        android:layout_marginLeft="@dimen/standartMargin"
        android:layout_marginEnd="@dimen/standartMargin"
        android:layout_marginRight="@dimen/standartMargin"
        android:layout_marginBottom="@dimen/standartMargin"
        android:hint="@string/passwordHint"
        android:textColor="@color/colorAccent"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:onClick="onClickRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standartMarginX3"
        android:layout_marginLeft="@dimen/standartMarginX3"
        android:layout_marginTop="@dimen/stardartMarginX2"
        android:layout_marginEnd="@dimen/standartMargin"
        android:layout_marginRight="@dimen/standartMargin"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickLogin"
        android:layout_marginStart="@dimen/standartMargin"
        android:layout_marginLeft="@dimen/standartMargin"
        android:layout_marginTop="@dimen/stardartMarginX2"
        android:layout_marginEnd="@dimen/standartMarginX3"
        android:layout_marginRight="@dimen/standartMarginX3"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />
</androidx.constraintlayout.widget.ConstraintLayout>